# pgp-milter

./: .gitignore  CHANGES.rst  COPYRIGHT  MANIFEST.in  README.md  README.rst  prep_reuse.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.reuse/: dep5
pgp_milter/: __init__.py  config.py  pgp.py
src/pgp_milter/: __init__.py  config.py  pgp.py
tests/: alice1.pub  alice2.pub  alice3.pub  alice3.sec  bob.pub  conftest.py  sample_body1.txt  sample_mime_enc_body.txt  test_config.py  test_pgp.py  test_pgp_milter.py
tests/samples/: full-mail01-enc  full-mail02  full-mail03  payload02
tests/samples/hkp-corpus/: hkp-sample-01-keys.openpgp.org-get-snowden@nsa.gov  hkp-sample-02-keys.openpgp.org-get-uli@gnufix.de  hkp-sample-03-keys.openpgp.org-get-0x4271f64cb3b9bc51  hkp-sample-04-keys.openpgp.org-index-snowden@nsa.gov  hkp-sample-05-keys.openpgp.org-index-uli@gnufix.de  hkp-sample-06-keys.openpgp.org-index-0x4271f64cb3b9bc51  hkp-sample-07-keys.openpgp.org-index-nobody@boum.org  hkp-sample-08-keys.openpgp.org-index-invalid-id  hkp-sample-09-keyserver.ubuntu.com-get-snowden@nsa.gov  hkp-sample-10-keyserver.ubuntu.com-get-uli@gnufix.de  hkp-sample-11-keyserver.ubuntu.com-get-0x4271f64cb3b9bc51  hkp-sample-12-keyserver.ubuntu.com-index-snowden@nsa.gov  hkp-sample-13-keyserver.ubuntu.com-index-uli@gnufix.de  hkp-sample-14-keyserver.ubuntu.com-index-0x4271f64cb3b9bc51  hkp-sample-15-keyserver.ubuntu.com-index-nobody@boum.org  hkp-sample-16-keyserver.ubuntu.com-index-invalid-id  hkp-sample-requests  hkp-samples-fake.json  hkp-samples.json  make_hkp_corpus.py  (+1 more)
